--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,8 @@
 </p>
 
 <p>
-  by <%= @post.user.username %>
+  by <%= link_to @post.user.username, user_posts_path(name: @post.user.username) %>
+
 </p>
 
 <p>
@@ -28,8 +29,9 @@
 
   <% @post.comments.each do |comment| %>
     <p>
-        <%= comment.author %> said...<br />
-        <%= comment.comment_entry %>
+
+      <strong><%= link_to comment.user.username, user_posts_path(name: comment.user.username) %> said...</strong>
+
     </p>
 
 <% end %>
