--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the Posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
 body {
   background: url(images/bg.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -14,10 +11,97 @@ body {
 }
 
 table {
-  width: 50%;
+  width: 75%;
   margin: 0 auto;
 }
 
-table tbody td {
-  margin: 20px;
+.container {
+  margin: 25px 25px 100px 25px;
 }
+
+tbody {
+  margin: 55px;
+  -webkit-box-shadow: 0px 0px 51px 13px rgba(0,0,0,0.84);
+  -moz-box-shadow: 0px 0px 51px 13px rgba(0,0,0,0.84);
+  box-shadow: 0px 0px 51px 13px rgba(0,0,0,0.84);
+}
+
+.container td .well{
+  margin: 15px;
+}
+
+#post_body{
+  // padding: 10px 75px;
+
+  width: 55%;
+}
+
+#post_side_buttons{
+  color: white;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 1);
+  // padding: 5px;
+  // position: relative;
+  // right: 2px;
+}
+
+#post_blog_entry{
+  text-align: center;
+  font-size: 25px;
+  padding: 20px;
+  color: white;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 1);
+}
+
+#post_author{
+  position: relative;
+  left: 20px;
+  color: white;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 1);
+}
+
+#post_title{
+  position: relative;
+  left: 15px;
+  color: white;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 1);
+}
+
+// a #post_side_buttons {
+//   color: white;
+//   text-shadow: 2px 2px 4px rgba(150, 150, 150, 1);
+// }
+
+td#post_side_buttons a {
+  color: white;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 1);
+}
+
+
+td#post_body.well{
+  margin: 30px;
+}
+
+#inside_post_title {
+  color: white;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 1);
+}
+
+#inside_username{
+  color: white;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 1);
+}
+
+#inside_username a {
+  color: white;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 1);
+}
+
+#post_bottombutton a {
+  color: white;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 1);
+  font-size: 25px;
+}
+
+// #paginate_color {
+//   color: white;
+// }
