--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -16,7 +16,7 @@ p, ol, ul, td {
 
 pre {
   background-color: #eee;
-  padding: 10px;
+  // padding: 10px;
   font-size: 11px;
 }
 
@@ -82,4 +82,8 @@ div {
 
 label {
   display: block;
+}
+
+tbody tr {
+
 }
