--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,26 +3,30 @@
 Welcome <%= current_user.username %>!
 
 <h1>Posts</h1>
-<%= paginate @posts %>
+<!-- <div id="paginate_color"> -->
+  <%= paginate @posts %>
+<!-- </div> -->
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Author</th>
-      <th>Blog entry</th>
+      <th id="post_title">Title</th>
+      <th id="post_author">Author</th>
+      <th id="post_blog_entry">Blog Entry</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @posts.each do |post| %>
-      <tr class="well">
-        <td><%= post.title %></td>
-        <td>by <em><%= link_to post.user.username, user_posts_path(name: post.user.username) %></em></td>
-        <td><%= post.blog_entry %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <tr>
+        <td id="inside_post_title"><%= post.title %></td>
+        <td id="inside_username" >by <em><%= link_to post.user.username, user_posts_path(name: post.user.username) %></em></td>
+        <div id="post_body_well">
+          <td <span id="post_body" class="well" ><%= post.blog_entry %></td>
+        </div>
+        <td id="post_side_buttons"><%= link_to 'Show', post %></td>
+        <td id="post_side_buttons"><%= link_to 'Edit', edit_post_path(post) %></td>
+        <td id="post_side_buttons"><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -31,5 +35,6 @@ Welcome <%= current_user.username %>!
 <%= paginate @posts %>
 <br>
 
-
-<%= link_to 'New Post', new_post_path %>
+<div id="post_bottombutton">
+  <%= link_to 'New Post', new_post_path %>
+</div>
