--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,15 @@
  *= require_tree .
  *= require_self
  */
+// td{
+//   font-family: "helvetica";
+//   font-size: 20px;
+// }
+
+// input .user_avatar{
+//   margin: 0 auto;
+// }
+
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
