--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -25,6 +25,6 @@
   </div>
 
   <div class="form-group">
-    <%= form.submit "Submit", class: "btn btn-primary" %>
+    <%= form.submit "Submit", class: "btn btn-warning" %>
   </div>
 <% end %>
