--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -26,6 +26,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "Submit", class: "btn btn-primary" %>
+    <%= form.submit "Submit", class: "btn btn-warning" %>
   </div>
 <% end %>
