--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,5 +2,8 @@
 
 <%= render 'form', post: @post %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<div id="posteditbuttons">
+  <%= link_to 'Back', posts_path %> |
+<%= link_to 'Show', @post %> 
+
+</div>
