--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,39 +2,56 @@
 
 Welcome <%= current_user.username %>!
 
-<h1>Posts</h1>
+<h1>Blog Topic</h1>
 <!-- <div id="paginate_color"> -->
-  <%= paginate @posts %>
+  <span id="paginateborder"> <%= paginate @posts %> </span>
 <!-- </div> -->
+<div class="postcontainer">
 <table>
   <thead>
     <tr>
-      <th id="post_title">Title</th>
-      <th id="post_author">Author</th>
-      <th id="post_blog_entry">Blog Entry</th>
+      <!-- <th id="post_title">Title</th>
+      <th id="post_author">Author</th> -->
+      <!-- <th id="post_blog_entry">Blog Entry</th> -->
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
+
     <% @posts.each do |post| %>
       <tr>
-        <td id="inside_post_title"><%= post.title %></td>
-        <td id="inside_username" >by <em><%= link_to post.user.username, user_posts_path(name: post.user.username) %></em></td>
-        <div id="post_body_well">
-          <td <span id="post_body" class="well" ><%= post.blog_entry %></td>
+        <div>
+          <td id="post_body" class="well" >
+            <div class="postheader">
+            <span id="posttitle"> <%= post.title %> </span>
+            <br>
+            by <em><%= link_to post.user.username, user_posts_path(name: post.user.username) %></em>
+            </div>
+            <br>
+            <%= post.blog_entry %>
+            <br>
+            <div class="showeditdelete">
+            <%= link_to 'Show', post %>
+            <%= link_to 'Edit', edit_post_path(post) %>
+            <%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+            </div>
+          </td>
         </div>
-        <td id="post_side_buttons"><%= link_to 'Show', post %></td>
+        <!-- <td id="post_side_buttons"><%= link_to 'Show', post %></td>
         <td id="post_side_buttons"><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td id="post_side_buttons"><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td id="post_side_buttons"><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
+
   </tbody>
 
 </table>
-<%= paginate @posts %>
+</div>
+
+<span id="paginateborderbottom"><%= paginate @posts %></span>
 <br>
 
 <div id="post_bottombutton">
-  <%= link_to 'New Post', new_post_path %>
+  <%= link_to 'Create New Post', new_post_path %>
 </div>
