--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<div id="blogeditcontent">
 <p>
   <strong>Title:</strong>
   <%= @post.title %>
@@ -23,6 +24,8 @@
 
 <%= link_to 'Edit', edit_post_path(@post) %>
 
+</div>
+
 <div id="comments">
 
   <%= render 'comments/form', comment: @comment %>
@@ -38,4 +41,4 @@
 
 </div>
 
-<%= link_to 'Back', posts_path %>
+<div id="editpagebackbutton"> <%= link_to 'Back', posts_path %> </div>
