--- a/app/views/posts/user_posts.html.erb
+++ b/app/views/posts/user_posts.html.erb
@@ -10,10 +10,10 @@
           <%= post.blog_entry.html_safe %>
         </p>
         <p>
-          <%= link_to 'Show', post, class: "btn btn-info" %>
+          <%= link_to 'Show', post, class: "btn btn-outline-success" %>
           <% if current_user.id == post.user_id %>
-	    <%= link_to 'Edit', edit_post_path(post), class: "btn btn-warning" %>
-	    <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+	    <%= link_to 'Edit', edit_post_path(post), class: "btn btn-outline-warning" %>
+	    <%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger" %>
 	  <% end %>
         </p>
       </div>
